<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.SmartTeacher.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textDirection="rtl" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space android:layout_width="match_parent" android:layout_height="12dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.SmartTeacher.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject">
        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/etSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space android:layout_width="match_parent" android:layout_height="12dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.SmartTeacher.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/term">
        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/etTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space android:layout_width="match_parent" android:layout_height="12dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.SmartTeacher.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space android:layout_width="match_parent" android:layout_height="12dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.SmartTeacher.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:gravity="top"
            android:textDirection="rtl" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
